--- a/patches/calamares-nixos-extensions/config/modules/packagechooser.conf
+++ b/patches/calamares-nixos-extensions/config/modules/packagechooser.conf
@@ -18,11 +18,10 @@ labels:
 default: gnome
 
 items:
-
     - id: gnome
       packages: [ gnome ]
       name: GNOME
-      description: "<html>Every part of GNOME has been designed to make it simple and easy to use. It provides a focused working environment that helps you get things done. GNOME is a popular choice and well tested on GLF-OS.<br/>
-                    <br/>
-                    Learn more at <a href=\"https://www.gnome.org/\">gnome.org</a></html>"
+      description: "<html>
+                    <p>Gnome est un environnement de bureau qui vise la simplicité en étant épuré et vous accompagnant pour avoir un environnement de travail qui vous permet de finir les choses. Gnome est un choix populaire et très apprécié dans la communauté de GLF-OS.</p>
+                    </html>"
       screenshot: "/run/current-system/sw/share/calamares/images/gnome.png"
