docs external link open in new tab

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -24,6 +24,7 @@ aux_links:
 
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: true
+nav_external_links_new_tab: true
 
 nav_enabled: true
 fold_nav: true
