--- a/.github/workflows/nix-build.yml
+++ b/.github/workflows/nix-build.yml
@@ -3,11 +3,15 @@ name: Build GLF-OS Configurations
 on:
   push:
     branches: [main, dev]
-    paths: ['**/*.nix']
+    paths:
+      - '**/*.nix'
+      - '**/*.lock'
 
   pull_request:
     branches: ['**'] 
-    paths: ['**/*.nix']
+    paths:
+      - '**/*.nix'
+      - '**/*.lock'
 
   workflow_dispatch:
 
