Add Plasma and editions selection

--- a/patches/calamares-nixos-extensions/config/modules/environment.conf
+++ b/patches/calamares-nixos-extensions/config/modules/environment.conf
@@ -13,15 +13,23 @@ mode: required
 method: legacy
 
 labels:
-    step: "Desktop"
+    step: "Environment"
+    step[fr]: "Environnement"
 
 default: gnome
 
 items:
     - id: gnome
       packages: [ gnome ]
-      name: GNOME
+      name: Gnome
       description: "<html>
                     <p>Gnome est un environnement de bureau qui vise la simplicité en étant épuré et vous accompagnant pour avoir un environnement de travail qui vous permet de finir les choses. Gnome est un choix populaire et très apprécié dans la communauté de GLF-OS.</p>
                     </html>"
       screenshot: "/run/current-system/sw/share/calamares/images/gnome.png"
+    - id: plasma
+      packages: [ plasma ]
+      name: Plasma
+      description: "<html>
+                    <p>Plasma est un environnement de bureau personnalisable, moderne et riche en fonctionnalités, conçu pour offrir une expérience utilisateur fluide et intuitive.</p>
+                    </html>"
+      screenshot: "/run/current-system/sw/share/calamares/images/plasma6.png"
